# chatixia-mesh

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CURRICULUM.md  Cargo.toml  README.md  SECURITY.md  agent.yaml.example  docker-compose.yml  my-agent.yaml
.claude/agents/: create-lesson.md  curriculum-overview.md  review-lesson.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yml  pages.yml  publish-pypi.yml
agent/: Dockerfile  pyproject.toml  run_agent.py
agent-mac/: .env.example  .gitignore  agent.yaml
agent/chatixia/: __init__.py  cli.py  config.py  runner.py  scaffold.py
agent/chatixia/core/: __init__.py  mesh_client.py  mesh_skills.py
agent/chatixia/skills/: __init__.py
agent/chatixia/skills/delegate/: handler.py
agent/chatixia/skills/list_agents/: handler.py
agent/chatixia/skills/mesh_broadcast/: handler.py  skill.json
agent/chatixia/skills/mesh_send/: handler.py
agent/core/: mesh_client.py  mesh_skills.py
agent/skills/delegate/: handler.py  skill.json
agent/skills/list_agents/: handler.py  skill.json
agent/skills/mesh_broadcast/: handler.py
agent/skills/mesh_send/: handler.py  skill.json
agent/tests/: test_cli.py  test_config.py  test_mesh_client.py  test_mesh_skills.py  test_runner.py  test_scaffold.py
docs/: ADR.md  ARCHITECTURE.md  COMPONENTS.md  DEPLOYMENT_GUIDE.md  DESIGN.md  GLOSSARY.md  PROTOCOL.md  ROADMAP.md  SYSTEM_DESIGN.md  THREAT_MODEL.md  WEBRTC_VS_ALTERNATIVES.md
docs/meetings/: 2026_03_21_S1.md  2026_03_22_S7.md
hub/: index.html  package.json  pnpm-lock.yaml  vite.config.ts
hub/src/: App.tsx  api.ts  theme.ts
hub/src/components/: AgentCards.tsx  AgentChat.tsx  ApprovalQueue.tsx  NetworkTopology.tsx  TaskQueue.tsx
infra/coturn/: turnserver.conf
infra/nginx/: signaling.conf
learnings/: 00-curriculum-overview.md  01-why-distributed-systems.md  02-peer-to-peer-networking.md  03-webrtc-fundamentals.md  04-async-programming-patterns.md  05-signaling-protocol-design.md  06-inter-process-communication.md  07-application-protocol-design.md  08-authentication-and-security.md  09-ai-agent-architecture.md  10-sidecar-pattern.md  11-transport-comparison.md  12-state-management-without-a-database.md  13-building-monitoring-dashboards.md  14-threat-modeling.md  15-deployment-patterns.md  16-architecture-decision-records.md  17-testing-distributed-systems.md  CHANGELOG.md  glossary.md  reading-list.md
learnings/diagrams/: architecture-overview.txt  connectivity-tiers.txt  signaling-sequence.txt  task-state-machine.txt  webrtc-stack.txt
registry/: Cargo.toml  Dockerfile
registry/src/: auth.rs  hub.rs  main.rs  pairing.rs  registry.rs  signaling.rs  topology.rs
sidecar/: Cargo.toml  Dockerfile
sidecar/src/: ipc.rs  main.rs  mesh.rs  protocol.rs  signaling.rs  webrtc_peer.rs
site/: index.html
