[project]
name = "chatixia-mesh-agent"
version = "0.1.0"
description = "Chatixia mesh agent — AI agent with WebRTC P2P networking"
requires-python = ">=3.12"

dependencies = [
    # LLM
    "openai>=1.40.0",
    "tiktoken>=0.7.0",

    # MCP
    "mcp>=1.26.0",

    # Web & API
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",

    # Data
    "psycopg[binary]>=3.2.0",

    # Utilities
    "structlog>=25.5.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.0",
    "pyyaml>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["core", "skills"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
