[project]
name = "chatixia"
version = "0.4.3"
description = "Deploy and run AI agents on the Chatixia mesh network"
# readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["ai", "agent", "llm", "mesh", "webrtc", "p2p"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # LLM
    "openai>=1.40.0",
    "tiktoken>=0.7.0",

    # MCP
    "mcp>=1.26.0",

    # Web & API
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",

    # Data
    "psycopg[binary]>=3.2.0",

    # Utilities
    "structlog>=25.5.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.15.0",
]

[project.scripts]
chatixia = "chatixia.cli:main"

[project.urls]
Homepage = "https://github.com/Chatixia-AI/chatixia-mesh"
Repository = "https://github.com/Chatixia-AI/chatixia-mesh"
Issues = "https://github.com/Chatixia-AI/chatixia-mesh/issues"

[tool.hatch.build.targets.sdist]
include = ["chatixia/"]

[tool.hatch.build.targets.wheel]
packages = ["chatixia"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
