[package]
name = "chatixia-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.12", features = ["typed-header"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
jsonwebtoken = "9"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
dashmap = "6"
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
futures-util = "0.3"
