[package]
name = "chatixia-sidecar"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
dotenvy = { workspace = true }
webrtc = "0.12"
tokio-tungstenite = { version = "0.28", features = ["native-tls"] }
reqwest = { version = "0.13", features = ["json"] }
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
futures-util = "0.3"
dashmap = "6"
